// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`перемещение существующей точки при дропе точки дернет проп 1`] = `
Array [
  "my-panorama",
  Object {
    "frame_info": Object {
      "aspectType": "R4x3",
      "frame": 42,
    },
    "point": Object {
      "coordinates": Object {
        "x": 0.25,
        "y": 0.5,
      },
      "id": "1601895867643-qK9cT",
    },
    "properties": Object {
      "text": Object {
        "text": "this is hot!",
      },
    },
  },
]
`;

exports[`редактирование точки при удачном сохранении вызовет проп с правильными параметрами 1`] = `
Array [
  "my-panorama",
  Object {
    "frame_info": Object {
      "aspectType": "R4x3",
      "frame": 53,
    },
    "point": Object {
      "coordinates": Object {
        "x": 0.5034246575342466,
        "y": 0.4576495405627659,
      },
      "id": "1601895867643-qK9cT",
    },
    "properties": Object {
      "image": Array [
        Object {
          "link": "new-photo-url",
        },
      ],
      "text": Object {
        "text": "new-text",
      },
    },
  },
]
`;
